tests/ui/error-codes/e0119/issue-27403.rs
pub struct GenX<S> {
    inner: S,
}

impl<S> Into<S> for GenX<S> { //~ ERROR conflicting implementations
    fn into(self) -> S {
        self.inner
    }
}

fn main() {}
